--- a/servlet/web/WEB-INF/web.xml
+++ b/servlet/web/WEB-INF/web.xml
@@ -4,6 +4,22 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+
+    <!--context-param 是上下文参数(它属于整个 web 工程)-->
+    <context-param>
+        <param-name>username</param-name>
+        <param-value>root</param-value>
+    </context-param>
+    <!--context-param 是上下文参数(它属于整个 web 工程)-->
+    <context-param>
+        <param-name>password</param-name>
+        <param-value>root</param-value>
+    </context-param>
+    <context-param>
+        <param-name>url</param-name>
+        <param-value>jdbc:mysql://localhost:3306/test</param-value>
+    </context-param>
+
     <!-- servlet标签给Tomcat配置Servlet程序-->
     <servlet>
         <!-- servlet-name标签 Servlet程序起一个别名（一般类名）-->
@@ -53,6 +69,34 @@
         <servlet-name>HelloServlet3</servlet-name>
         <url-pattern>/hello3</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>ContextServlet</servlet-name>
+        <servlet-class>com.qinh.ContextServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ContextServlet</servlet-name>
+        <url-pattern>/context</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ContextServlet1</servlet-name>
+        <servlet-class>com.qinh.ContextServlet1</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ContextServlet1</servlet-name>
+        <url-pattern>/context1</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ContextServlet2</servlet-name>
+        <servlet-class>com.qinh.ContextServlet2</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ContextServlet2</servlet-name>
+        <url-pattern>/context2</url-pattern>
+    </servlet-mapping>
+    
 
 
 
