--- a/servlet2/web/WEB-INF/web.xml
+++ b/servlet2/web/WEB-INF/web.xml
@@ -64,4 +64,22 @@
         <servlet-name>ResponseIOServlet</servlet-name>
         <url-pattern>/responseIOServlet</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Response1</servlet-name>
+        <servlet-class>com.qinh.Response1</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Response1</servlet-name>
+        <url-pattern>/response1</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Response2</servlet-name>
+        <servlet-class>com.qinh.Response2</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Response2</servlet-name>
+        <url-pattern>/response2</url-pattern>
+    </servlet-mapping>
 </web-app>
